--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "@types/node": "^17.0.12",
     "eslint": "^8.7.0",
     "jest": "^27.4.7",
